--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
     <!-- SEO and Social Media Meta Tags -->
-    <meta property="og:title" content="Santa Cruz Archive - Convent of Santa Cruz la Real" />
+    <meta property="og:title" content="Santa Cruz Archive" />
     <meta property="og:description" content="A photographic collection documenting the historic Convent of Santa Cruz la Real in Segovia, Spain. Explore the former Dominican monastery that now forms part of IE University's campus." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.santacruzarchive.net/" />
@@ -89,7 +89,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
-    <title>Santa Cruz Archive - Convent of Santa Cruz la Real in Segovia</title>
+    <title>Santa Cruz Archive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
